# authenticated-user

./: ..gitignore.swp  Cargo.toml  Dockerfile  README.md  docker-compose.yml  uploads.json
frontend/: index.html
src/: main.rs
uploads/: uploads.json
