     [package]
     name = "upload-service"
     version = "0.1.0"
     edition = "2021"

     [dependencies]
     actix-web = "4.5"
     actix-multipart = "0.6"
          serde = { version = "1.0", features = ["derive"] }
     serde_json = "1.0"
               chrono = "0.4"
     futures-util = "0.3"
     actix-files = "0.6"